# ContextEngineering

./: .gitignore  CHEATSHEET.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE  PLAN.md  README.md  REFERENCES.md
code/22-rag-chatbot/: .env.example  README.md  pyproject.toml
code/22-rag-chatbot/data/corpus/: onboarding.md  refunds.md
code/22-rag-chatbot/prompts/: chunk_header.md  system.md
code/22-rag-chatbot/src/rag/: __init__.py  chat.py  eval.py  ingest.py  llm.py  prompt.py  retrieve.py
code/22-rag-chatbot/tests/: fixtures.json  test_chunker.py  test_retriever.py
code/23-mcp-server-full/: AGENTS.md  README.md  pyproject.toml  server.py
code/23-mcp-server-full/data/: orders.json  refunds_policy.md
code/23-mcp-server-full/prompts/: triage_intake.md
code/23-mcp-server-full/tests/: test_server.py
code/24-email-reply-agent/: .env.example  README.md  pyproject.toml
code/24-email-reply-agent/data/inbox/: t-001.json  t-002.json
code/24-email-reply-agent/data/sent/: 2025-07-29__anika@partnerco.io__intro.txt  2025-09-12__anika@partnerco.io__partnership_terms.txt
code/24-email-reply-agent/prompts/: drafter_system.md  triager_system.md
code/24-email-reply-agent/src/emailbot/: __init__.py  draft.py  eval.py  llm.py  memory.py  replies.py  run.py  send_gate.py  triage.py
code/24-email-reply-agent/src/emailbot/mailbox/: __init__.py  base.py  fake.py  gmail.py
code/24-email-reply-agent/tests/: test_send_gate.py  test_triage.py
posts/01-why-context-engineering/: index.md
posts/02-six-layers-of-context/: frontmatter.yaml  index.md
posts/03-how-llms-read-context/: index.md  (+1 more)
templates/: citation-style.md  code-readme-template.md  diagram-style-guide.md  post-template.md
tools/: build-cheatsheet.ps1  lint-posts.ps1  render-diagrams.ps1  word-count.ps1
(+51 files in other folders)
