[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Companion code for Post 22 — RAG chatbot from scratch."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "voyageai>=0.2.3",
    "cohere>=5.5",
    "chromadb>=0.5.5",
    "rank-bm25>=0.2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "ragas>=0.1.10",
    "datasets>=2.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
