[project]
name = "acme-support-mcp"
version = "0.1.0"
description = "Companion code for Post 23 — MCP server from scratch."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
