[project]
name = "email-reply-agent"
version = "0.1.0"
description = "Companion code for Post 24 — email-reply agent capstone."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "voyageai>=0.2.3",
    "chromadb>=0.5.5",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emailbot"]
